role untuk ropik

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
               <h2 id="room-name"></h2>
               <p>Kapasitas: <span id="room-capacity"></span></p>
               <p>Deskripsi: <span id="room-description"></span></p>
+              <p>Ruangan: <span id="room-room"></span></p>
           </div>
       </div>
       
