--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peminjaman Ruang Guru</title>
+    <title>Peminjaman Ruang Aja</title>
     <style>
         /* Your existing CSS styles */
         .modal-overlay {
