--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
               <p>Kapasitas: <span id="room-capacity"></span></p>
               <p>Deskripsi: <span id="room-description"></span></p>
               <p>Ruangan: <span id="room-room"></span></p>
+              <p>Harga: <span id="room-price"></span></p>
           </div>
       </div>
       
